--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&display=swap"
         rel="stylesheet">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 
 <body class="body">
@@ -49,28 +49,28 @@
         </div>
         <div class="Who">
             <h2 class="h">Who we are?</h2>
-            <p class="p">We have been operating for over 30 years and are Members of <br>The Federation of Master
-                Builders. We work on projects big and small from small <br>residential extensions to full house. We are
-                so happy with this theme. Everyday it <br>make our lives better.</p><br>
+            <p class="p">We have been operating for over 30 years and are Members of The Federation of <br> Master
+                Builders. We work on projects big and small from small residential extensions to full house. We are
+                so happy with this theme. Everyday it make our lives better.</p><br>
             <li>We care about environment.</li><br>
             <li>We are trusted by hundreds of clients</li><br>
             <li>Social media loves us!</li><br>
             <li>This list is super easy to create.</li><br>
         </div>
     </div>
-    <div class="total">
-        <div class="ditotal">
+    <div class="total" >
+        <div class="ditotal" style="margin-right:3% ;padding-top: 9%;">
             <h2 class="h1">Our Location</h2>
-            <p class="p4">We have been operating for over 30 years and are Members <br>of The Federation of Master
-                Builders. We work on projects big and <br>small from small residential extensions to full house. We are
-                so happy with this theme.<br> Everyday it make our lives better.
-                Story on projects big and small from small<br> residential extensions to full house. We are so happy
+            <p class="p4" style="margin-top:2rem ;">We have been operating for over 30 years and are Members of The Federation of <br> Master
+                Builders. We work on projects big and small from small residential extensions<br> to full house. We are
+                so happy with this theme. Everyday it make our lives better.<br><br>
+                Story on projects big and small from small residential extensions to full house. We are so happy
                 with this theme. Everyday it make our lives better.</p>
         </div>
         <div class="ditotal2"><img class="img2" src="images/full-2-800x640.jpg"></div>
     </div>
 
-    <h2 class="h1"> Our Baking</h2>
+    <h2 class="h1" style="text-align: center;"> Our Baking</h2>
     <p class="p1">Learn more about them. We have worked truly hard to make them perfect for every use.</p>
     <div class="all">
         <div class="d2"><img class="img" src="images/ben-garratt-134774-600x500.jpg">
