--- a/our offers.html
+++ b/our offers.html
@@ -21,9 +21,9 @@
                     <li class="li1 l3"><a href="index.html">Home</a></li>
                     <li class="li2 l3"><a href="about.html">About</a></li>
                     <li class="li3 l3"><a href="our offers.html">Our Offer</a></li>
-                    <li class="li4 l3"><a href="about.html">Gallery</a></li>
-                    <li class="li5 l3"><a href="about.html">Blog</a></li>
-                    <li class="li6 l3"><a href="about.html">Contact</a></li>
+                    <li class="li4 l3"><a href="gallery.html">Gallery</a></li>
+                    <li class="li5 l3"><a href="blog.html">Blog</a></li>
+                    <li class="li6 l3"><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
             <div class="middle">
