--- a/about.html
+++ b/about.html
@@ -16,14 +16,15 @@
     <div class="background">
         <div class="backgroundd">
             <div class="bar">
-                <div class="logo"><img src="images/bakery-color.png" width="177"></div>
+                <div class="logo"><img src="images/bakery-color.png" width="165"></div>
                 <ul class="lil">
                     <li class="li1 l3"><a href="index.html">Home</a></li>
                     <li class="li2 l3"><a href="about.html">About</a></li>
-                    <li class="li3 l3"><a href="about.html">Our Offer</a></li>
-                    <li class="li4 l3"><a href="about.html">Gallery</a></li>
-                    <li class="li5 l3"><a href="about.html">Blog</a></li>
-                    <li class="li6 l3"><a href="about.html">Contact</a></li>
+                    <li class="li3 l3"><a href="our offers.html">Our Offer</a></li>
+                    <li class="li4 l3"><a href="gallery.html">Gallery</a></li>
+                    <li class="li5 l3"><a href="blog.html">Blog</a></li>
+                    <li class="li6 l3"><a href="contact.html">Contact</a></li>
+                    <li class="li6 l3"><a href="login.html">Login</a></li>
                 </ul>
             </div>
             <div class="middle">
@@ -138,7 +139,7 @@
                     <li class="conl3">Weekends 10AM - 11PM</li>
                 </ul>
             </div>
-            <div class=" c44">
+            <div class="c c44">
                 <h2 class="hs">Contact Details</h2>
                 <ul style="padding-left: 0;" class=" c4">
                     <li class="conl2">Manchester Road 123-78B, Silictown 7854MD, Great Country</li>
