--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
                 <div class="logo"><img src="images/bakery-light-1.png" width="179"></div>
 
                 <ul class="lil">
-                    <li class="li1 l3"><a href="about.html">Home</a></li>
+                    <li class="li1 l3"><a href="index.html">Home</a></li>
                     <li class="li2 l3"><a href="about.html">About</a></li>
-                    <li class="li3 l3"><a href="about.html">Our Offer</a></li>
-                    <li class="li4 l3"><a href="about.html">Gallery</a></li>
-                    <li class="li5 l3"><a href="about.html">Blog</a></li>
-                    <li class="li6 l3"><a href="about.html">Contact</a></li>
+                    <li class="li3 l3"><a href="our offers.html">Our Offer</a></li>
+                    <li class="li4 l3"><a href="gallery.html">Gallery</a></li>
+                    <li class="li5 l3"><a href="blog.html">Blog</a></li>
+                    <li class="li6 l3"><a href="contact.html">Contact</a></li>
+                    <li class="li6 l3"><a href="login.html">Login</a></li>
                 </ul>
 
             </div>
@@ -39,7 +40,7 @@
                 <button class="btm btm1">Learn More</button>
                 <button class="btm btm2">Contact Us</button>
             </div>
-            <div  class="dot">
+            <div class="dot">
                 <a class="dot2" href="#1">
                     <i class="fa-solid fa-circle fa-fade"></i>
                 </a>
@@ -49,7 +50,7 @@
 
     <div class="all">
         <div class="d1">
-            <img src="images/alexandru-stavrica-170390-800x760.jpg" width="560">
+            <img src="images/alexandru-stavrica-170390-800x760.jpg" width="100%">
         </div>
         <div class="Who">
             <h2 class="h">Who we are?</h2>
@@ -90,18 +91,21 @@
             <p class="p1">Proin interdum, ante ut sollicitudin commodo, tellus quam sagittis libero, at semper
                 mauris
                 velit a velit. Phasellus commodo turpis et lacinia posuere.</p>
+            <a href="login.html"><button class="buy" type="submit">Buy</button></a>
         </div>
         <div class="d3"><img class="img" src="images/stas-ovsky-123540-600x500.jpg">
             <h2 class="h2">Bagels</h2>
             <p class="p1">Proin interdum, ante ut sollicitudin commodo, tellus quam sagittis libero, at semper
                 mauris
                 velit a velit. Phasellus commodo turpis et lacinia posuere</p>
+            <a href="login.html"><button class="buy" type="submit">Buy</button></a>
         </div>
         <div class="d4"><img class="img" src="images/clem-onojeghuo-206832-600x500.jpg">
             <h2 class="h2">Cookies</h2>
             <p class="p1">Proin interdum, ante ut sollicitudin commodo, tellus quam sagittis libero, at semper
                 mauris
                 velit a velit. Phasellus commodo turpis et lacinia posuere.</p>
+            <a href="login.html"><button class="buy" type="submit">Buy</button></a>
         </div>
     </div>
     <div class="elom">
@@ -171,7 +175,7 @@
                     <li class="conl3">Weekends 10AM - 11PM</li>
                 </ul>
             </div>
-            <div class=" c44">
+            <div class=" c44 c">
                 <h2 class="hs">Contact Details</h2>
                 <ul style="padding-left: 0;" class=" c4">
                     <li class="conl2">Manchester Road 123-78B, Silictown 7854MD, Great Country</li>
