--- a/our offers.html
+++ b/our offers.html
@@ -16,7 +16,7 @@
     <div class="background">
         <div class="backgroundd">
             <div class="bar">
-                <div class="logo"><img src="images/bakery-color.png" width="177"></div>
+                <div class="logo"><img src="images/bakery-color.png" width="165"></div>
                 <ul class="lil">
                     <li class="li1 l3"><a href="index.html">Home</a></li>
                     <li class="li2 l3"><a href="about.html">About</a></li>
@@ -24,6 +24,7 @@
                     <li class="li4 l3"><a href="gallery.html">Gallery</a></li>
                     <li class="li5 l3"><a href="blog.html">Blog</a></li>
                     <li class="li6 l3"><a href="contact.html">Contact</a></li>
+                    <li class="li6 l3"><a href="login.html">Login</a></li>
                 </ul>
             </div>
             <div class="middle">
@@ -141,7 +142,7 @@
     </div>
     <div class="cb">
         <div class="contactinfo">
-            <div class="c11 c">
+            <div class="c1 c">
                 <h2 class="hs">About us</h2>
                 <p class="ps">I am text block. Click edit button to change this text. Lorem ipsum dolor sit amet,
                     consectetur. I am
@@ -171,7 +172,7 @@
                     <li class="conl3">Weekends 10AM - 11PM</li>
                 </ul>
             </div>
-            <div class=" c44">
+            <div class="c c44">
                 <h2 class="hs">Contact Details</h2>
                 <ul style="padding-left: 0;" class=" c4">
                     <li class="conl2">Manchester Road 123-78B, Silictown 7854MD, Great Country</li>
